# SeleniumProjectmigration

./: .gitignore  CustomLibrary.py  README.md  _check.py  _check_import.py  _check_robot_import.py  _check_sig.py  plan-selenium-to-robot-framework-migration.md  pyproject.toml  pytest.ini  requirements.txt  robot.cfg  run_tests.bat  run_tests.sh
libraries/: CustomLibrary.py  __init__.py
resources/: BasePage.resource  FormPage.resource  HomePage.resource  LoginPage.resource  NavigationPage.resource  SharedSettings.resource
testdata/: config.yaml  locators.yaml  scenarios.yaml  users.yaml
tests/: main_suite_runner.robot
tests/forms/: __init__.robot  form_test_suite.robot
tests/login/: login_test_suite.robot
tests/navigation/: __init__.robot  navigation_test_suite.robot
tests/verification/: __init__.robot  verification_test_suite.robot
uploads/: GWCT-Test Automation Guidelines-050526-091804.pdf.extracted.txt  TEST-Test Automation Strategy 2025-2026-050526-091858.pdf.extracted.txt
